contrast issue fix

--- a/styles/base.css
+++ b/styles/base.css
@@ -97,6 +97,7 @@ footer {
     padding: 2rem;
     grid-column: 1 / 3;
     font-family: "Merienda", cursive;
+    color: #fff;
 }
 
 .copyright,
